--- a/docs/config.json.sample
+++ b/docs/config.json.sample
@@ -21,6 +21,13 @@
 			"MinerInfo": "DID-3",
 			"MinTxFee": 100,
 			"InstantBlock": false
-		}
+		},
+        "RpcConfiguration": {
+         "User": "ElaUser",
+         "Pass": "Ela123" ,
+         "WhiteIPList":[
+           "127.0.0.1"
+         ]
+       }
 	}
 }
