--- a/docs/testnet_config.json.sample
+++ b/docs/testnet_config.json.sample
@@ -31,6 +31,13 @@
       "MinerInfo": "TOKEN",
       "MinTxFee": 100,
       "InstantBlock": false
+    },
+    "RpcConfiguration": {
+      "User": "ElaUser",
+      "Pass": "Ela123" ,
+      "WhiteIPList":[
+        "127.0.0.1"
+      ]
     }
   }
 }
